Fixed alignment issues with iframes (they're centered now)

--- a/files/style.css
+++ b/files/style.css
@@ -32,6 +32,11 @@ article h1 {
 	margin: 0;
 }
 
+article iframe {
+	display: block;
+	margin: 0 auto;
+}
+
 body {
 	background: #d0c3b4;
 	font-family: sans-serif;
@@ -110,6 +115,7 @@ article h1 {
 
 article img {
 	max-width: 100%;
+	margin: 0 auto;
 }
 
 footer {
